# BCBLViennaSoft

./: .gitignore  .gitmodules  LICENSE  README.md  bvRP.m  bvRootPath.m  pasar.txt
morphing/: .CreateStimulusRetStim.py.swp  CreateStimulusRetStim.py  MorphCB2W.py  RunPython.sh  a6202e1f-393c-4da7-a902-8dcbf3425626.ipynb  instructions.txt  pyproject.toml  vienna_python_env.yml
morphing/DATA/retWordsMagno/: AT_CB_tr-2_duration-300sec_flickfreq-4Hz_size-1024pix_maxEcc-9deg_barWidth-3deg_letsize-50.mat  AT_CB_tr-2_duration-300sec_flickfreq-4Hz_size-1024pix_maxEcc-9deg_barWidth-4deg.mat  AT_CB_tr-2_duration-300sec_flickfreq-8Hz_size-1024pix_maxEcc-9deg_barWidth-3deg_letsize-50.mat  AT_FF_tr-2_duration-300sec_flickfreq-2Hz_size-1024pix_maxEcc-9deg_barWidth-3deg_letsize-100.mat  AT_FF_tr-2_duration-300sec_flickfreq-2Hz_size-1024pix_maxEcc-9deg_barWidth-3deg_letsize-50.mat  AT_RW_tr-2_duration-300sec_flickfreq-2Hz_size-1024pix_maxEcc-9deg_barWidth-3deg_letsize-100.mat  AT_RW_tr-2_duration-300sec_flickfreq-2Hz_size-1024pix_maxEcc-9deg_barWidth-3deg_letsize-50.mat  AT_RW_words_list.txt  ES_CB_768x768x10.mat  ES_CB_768x768x100.mat  ES_CB_tr-2_barwidth-2_dur-300_framedur-4.mat  ES_CB_tr-2_barwidth-2_dur-300_framedur-4_ParamsStims.mat  ES_CB_tr-2_barwidth-2_dur-300_framedur-4_all.mat  ES_PW_768x768x10.mat  (+43 more)
morphing/autoimagemorph/: autoimagemorph.py
morphing/matlab/: BcblViennaStimDisplay.asv  BcblViennaStimDisplay.m  createStimuliAndPng.m  createStimuliAndPng.m~  download_from_OSF.m  stimulus.mat
morphing/pythoncode/: stimulus.py
morphing/tests/: test_morfing.py
(+682 files in other folders)
