[tool.poetry]
name = "morfing"
version = "0.1.0"
description = ""
authors = ["Garikoitz Lerma-Usabiaga <garikoitz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.1"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
opencv-python = "^4.6.0"
argparse = "^1.4.0"
pandas = "^1.4.3"
js = "^1.0"
scikit-image = "^0.19.3"
nipy = "^0.5.0"
parfor = "^2022.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
jupyterlab = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
